rtg_tests/negative/module_import_cycle/cmd/app/main.go
package main

import _ "example.com/rtgtests/negative/module_cycle/lib"

func main() {}
